--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-atlier = { path = "../../../atlier" }
-lifec = { path = "../../../lifec" }
+atlier =  { git = "https://github.com/juliusl/atlier.git", branch = "main" }
+lifec  =  { git = "https://github.com/juliusl/lifec.git", branch = "main" }
 shinsu = { path = "../.." }
 imgui = "0.8.2"
