--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1.19.2", features = ["default", "rt-multi-thread", "sync", 
 specs = { version = "0.18.0", features = ["default", "derive"] }
 imgui = "0.8.2" 
 tracing = "0.1.37"
+tracing-subscriber = "0.3.15"
